--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ joblib==1.3.2
 numpy==1.24.3
 pandas==2.0.3
 
+torch>=2.0.0
+torch-geometric>=2.3.0
+tweepy>=4.14.0
+flask>=2.3.0
+python-dotenv>=1.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+requests>=2.31.0
+
